--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ public class ProductsTest extends AbstractTest{
     @Order(1)
     void getProducts_whenValid_shouldReturn() throws SQLException {
         //given
+        //Таблица наывается products, а не product
         String sql = "SELECT * FROM product WHERE menu_name='GOJIRA ROLL'";
         Statement stmt = getConnection().createStatement();
         int countTableSize = 0;
@@ -37,6 +38,7 @@ public class ProductsTest extends AbstractTest{
     @CsvSource({"GOJIRA ROLL, 300", "VIVA LAS VEGAS ROLL, 450", "FUTOMAKI, 700", "TOOTSY MAKI, 133"})
     void ProductsById_whenValid_shouldReturn(String name, int price) throws SQLException {
         //given
+        //Таблица наывается products, а не product
         String sql = "SELECT * FROM product WHERE menu_name='" + name + "'"; ;
         Statement stmt  = getConnection().createStatement();
         String nameString = "";
